# skaworkflows

./: .coverage  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  MANIFEST.ini  README.md  eagle_daliuge_translation.py  eagle_file_wrapper.py  hpso_compute_low.csv  hpso_to_observation.py  pandas_system_sizing.py  pipeline_cost_generator.py  pipelines_overview.ipynb  pyproject.toml  requirements.txt  sdp_definitions.py  sdp_system_sizing.py  setup.py  testfileoutput.csv  tmp  unrolled_False.json  unrolled_True.json
.archive/: README.md
.archive/csv/: SKA1_Mid.csv
.archive/hpconfig/: GalaxyNoGPU_nd_1618401250.json  PawseyGalaxy_nd_1619058732.json
.github/.workflows/: run_unittests.yml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: run-unittests.yml
csv/: SKA1_Low.csv  SKA1_Low_COMPUTE.csv  SKA1_Low_DATA.csv  SKA1_Low_PipelineProducts.csv  SKA1_Low_compute_pandas.csv  SKA1_Low_hpso_pandas.csv  SKA1_Mid_COMPUTE.csv  SKA1_Mid_DATA.csv  SKA1_Mid_PipelineProducts.csv
data/: pandas_system_sizing.py
data/eagle/: eagle_lgt_scatter.graph  sdp_continuum_tests.json
data/json/: observations.json
data/pandas_sizing/: component_compute_SKA1_Low.csv  component_compute_SKA1_Low_long.csv  component_compute_SKA1_Low_mid.csv  component_compute_SKA1_Low_short.csv  component_compute_SKA1_Mid.csv  component_compute_SKA1_Mid_long.csv  component_compute_SKA1_Mid_mid.csv  component_compute_SKA1_Mid_short.csv  total_compute_SKA1_Low.csv  total_compute_SKA1_Low_long.csv  total_compute_SKA1_Low_mid.csv  total_compute_SKA1_Low_short.csv  total_compute_SKA1_Mid.csv  total_compute_SKA1_Mid_long.csv  total_compute_SKA1_Mid_mid.csv  total_compute_SKA1_Mid_short.csv
docs/: conf.py
docs/source/: conf.py  (+6 more)
eagle/: SDPContinuumPipelineNoOuter.graph  sdp_continuum_tests.json
examples/: comparison_runner.py  example_requirements.py  parametric_comparisons.py  system_sizing_comparisons.py  total_sizing_parametric_comparisons.py
hpconfig/: GalaxyNoGPU_nd_1618401250.json  PawseyGalaxy_nd_1619058732.json  README.md  hpconfig.py  setup.py
pipelines/: common.py  eagle_daliuge_translation.py  hpso_to_observation.py
skaworkflows/: __init__.py  common.py  config_generator.py  parametric_runner.py  parser.py  sdp_runner.py
tests/: __init__.py  test_config_generator.py  test_observation_creation.py  test_observation_generation.py  test_system_sizing.py  test_workflow_analysis.py  test_workflow_generation.py
workflow/: eagle_daliuge_translation.py  hpso_to_observation.py
(+359 files in other folders)
