[tool.poetry]
name = "skaworkflows"
version = "0.1.0"
description = "SKA workflow generator and characterisation"
authors = ["Ryan Bunney"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.2.0"
networkx = ">=2.6"
pandas = ">=1.2.4"
matplotlib = ">=3.1.1"
coverage = ">=4.5.4"
coveralls = ">=1.8.2"
sdp-par-model = {git = "https://github.com/ska-telescope/sdp-par-model.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
