[tool.poetry]
name = "skaworkflows"
version = "0.1.0"
description = "SKA workflow generator and characterisation"
authors = ["Ryan Bunney"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.2.0"
networkx = ">=2.6"
pandas = ">=1.2.4"
matplotlib = ">=3.1.1"
coverage = ">=4.5.4"
coveralls = ">=1.8.2"
IPython = ">=7.27.0"
pydot = ">=1.4.2"
sdp-par-model = {git = "https://github.com/ska-telescope/sdp-par-model.git"}
daliuge-common =  {git = "https://github.com/ICRAR/daliuge.git#egg&subdirectory=daliuge-common"}
daliuge-engine = {git = "https://github.com/ICRAR/daliuge.git#egg&subdirectory=daliuge-engine"}
daliuge-translator = {git = "https://github.com/ICRAR/daliuge.git#egg&subdirectory=daliuge-translator"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
