[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skaworkflows"
version = "0.1.0"
description = "Workflows for experiments with SKA Science Data Processor"
authors = [
    { name = "Ryan Bunney", email = "ryan.bunney@icrar.org" },
]
license = { text = "GNU" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.2.0",
    "networkx>=2.0",
    "matplotlib>=3.0",
    "pandas>=0.20",
    "coverage",
    "IPython",
    "pydot",
    "coveralls",
    "daliuge-common",
    "daliuge-engine",
    "daliuge-translator",
    "sdp-par-model @ git+https://github.com/top-sim/sdp-par-model",
    "ipywidgets",
    "scipy",
    "sympy",
    "notebook",
    "ipywidgets",
    "graphviz",
    "pymp-pypi",
    "pylru",
    "sortedcontainers",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/top-sim/skaworkflows"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs"]